# numerical-integration

./: .gitignore  CMakeLists.txt  README.md  pixi.toml  run.sh
src/: main.cpp  riemann.cpp  riemann.hpp  trapezoidal.cpp  trapezoidal.hpp
